<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.DetailMakananActivity"
    tools:showIn="@layout/activity_detail_makanan">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/gambarMakanan"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/background_makanan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/shadow_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gambarMakanan"/>

    <View
        android:id="@+id/backHome"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:background="@drawable/ic_cancel_white_24dp"
        app:layout_constraintTop_toTopOf="@id/gambarMakanan"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/ratingMakanan"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="5"
        android:theme="@style/RatingBar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/gambarMakanan"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/gambarMakanan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/hargaMakanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_harga_makanan"
                android:maxLines="1"
                android:lines="1"
                style="@style/TextAppearance.AppCompat.Menu"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleMakanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_nama_makanan"
                android:maxLines="1"
                android:lines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                style="@style/TextAppearance.AppCompat.Headline" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/deskripsiMakanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_deskripsi_makanan"
                style="@style/TextAppearance.AppCompat.Small"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>