<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AddEditMakananActivity"
    tools:showIn="@layout/activity_add_edit_makanan">

    <include layout="@layout/app_toolbar"
        android:id="@+id/inc_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/inc_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_foto_makanan"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageMakanan"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/hint_foto_makanan"
                android:src="@drawable/background_makanan"
                android:layout_marginBottom="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlTitleMakanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nama_makanan"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTitleMakanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapWords"
                    android:lines="1"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlHargaMakanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_harga_makanan"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtHargaMakanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="number|numberSigned"
                    android:lines="1"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_rating_makanan"
                android:layout_marginBottom="8dp" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/rateMakanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/RatingBar"
                android:rating="0"
                android:numStars="5"
                android:stepSize="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlDeskripsiMakanan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_deskripsi_makanan"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDeskripsiMakanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:inputType="text|textMultiLine|textCapWords"
                    android:lines="5"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>